Initializing project for testing.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 file.reference.CrystalClarity-public_html=public_html
 file.reference.CrystalClarity-test=test
 files.encoding=UTF-8
+project.license=gpl30
 site.root.folder=${file.reference.CrystalClarity-public_html}
 test.folder=${file.reference.CrystalClarity-test}
